hotfix: buscando apenas usuários ativos