@@ -12,7 +12,6 @@ import org.springframework.stereotype.Service;
 
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Service
 public class UserService {
@@ -37,8 +36,9 @@ public class UserService {
     public List<UserDTO> findAll() {
         return userRepository.findAll()
                 .stream()
+                .filter(User::isAtivo)
                 .map(UserDTO::new)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public UserDTO findById(Long id) {
